--- a/src/style/RegisterForm.css
+++ b/src/style/RegisterForm.css
@@ -1,12 +1,12 @@
-.register-container  {
+.register-form  {
     display: flex;
     flex-direction: column;
     background-color: #fff;
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 40px;
-    max-width: 200px;
+    padding: 40px 40px 40px 40px;
+    max-width: 400px;
     width: 100%;
     margin: 0 auto;
   }
@@ -18,21 +18,7 @@
     font-family: Impact, "Arial Narrow Bold", sans-serif;
   }
   
-  .create-account {
-    margin-top: 20px;
-    text-align: center;
-  }
-  
-  .create-account h2 {
-    font-size: 18px;
-  }
-  
-  .create-account-link {
-    color: #007bff;
-    text-decoration: none;
-  }
-  
-  .create-account-link:hover {
+  .back-to-login-page:hover {
     text-decoration: underline;
   }
   
@@ -40,9 +26,8 @@
     width: 100%;
     margin-top: 10px;
   }
-  
-  @media (max-width: 200px) {
-    .register-container {
-      max-width: 90%;
-    }
+
+  .input-register{
+    margin: 10px;
   }
+  
