--- a/src/style/Sidebar.css
+++ b/src/style/Sidebar.css
@@ -1,12 +1,28 @@
-.custom-header-sidebar {
-    padding: 0;
-    color: aquamarine;
-    background: aquamarine;
+.header-sidebar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #e6dee6;
+  color: #339c2a;  
+  padding: 20px 20px 20px 150px;
+  text-align: center;
+  font-size: 30px;
   }
   
-  .custom-content-sidebar {
+  .content-sidebar {
     padding: 24px;
     min-height: 360px;
-    background: rgb(215, 202, 202);
+    background: whitesmoke;
+  }
+  
+  .footer-sidebar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #e6dee6;
+    color: #339c2a;  
+    padding: 20px 20px 20px 150px;
+    text-align: center;
+    font-size: 20px;
   }
   
