--- a/src/style/LoginForm.css
+++ b/src/style/LoginForm.css
@@ -1,31 +1,77 @@
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-image: url("https://data.designervn.net/2019/09/9676_3c1b0f70d986fd4e324cb43331b33b81.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.image-form-container {
+  display: flex;
+  align-items: stretch;
+}
+
+.image-container {
+  flex: 1;
+  /* max-width: 200px;  */
+  margin-right: 0px;
+}
+
+.image-container img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
 .login-form {
-    display: flex;
-    flex-direction: column;
-    background-color: #fff;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 40px 40px 40px 40px;
-    max-width: 400px;
-    width: 100%;
-    margin: 0 auto;
-  }
-  
-  .title-login {
-    margin-bottom: 20px;
-    font-size: 25px;
-    color: rgb(75, 170, 202);
-    font-family: Impact, "Arial Narrow Bold", sans-serif;
-  }
-  .create-account {
-    margin-top: 20px;
-    text-align: center;
-  }
-  .create-account-link {
-    color: #007bff;
-    text-decoration: none;
-  }
-  
-  .create-account-link:hover {
-    text-decoration: underline;
-  }
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 40px 40px 40px 40px;
+  max-width: 400px;
+  width: 100%;
+  margin: 0 auto;
+  background: linear-gradient(
+    135deg,
+    rgba(34, 193, 195, 1) 0%,
+    rgb(228, 226, 223) 100%
+  );
+}
+
+.title-login {
+  margin-bottom: 20px;
+  font-size: 25px;
+  color: rgb(202, 96, 35);
+  font-family: Impact, "Arial Narrow Bold", sans-serif;
+}
+.create-account {
+  margin-top: 20px;
+  text-align: center;
+}
+.create-account-link {
+  color: #007bff;
+  text-decoration: none;
+}
+
+.create-account-link:hover {
+  text-decoration: underline;
+}
+
+.login-form .ant-input {
+  width: 100%;
+  height: 100%;
+  margin: 10px;
+}
+
+.login-form .login-form-button {
+  width: 100%;
+  height: 100%;
+  margin: 0%;
+}
