--- a/src/style/RegisterForm.css
+++ b/src/style/RegisterForm.css
@@ -1,33 +1,76 @@
-.register-form  {
-    display: flex;
-    flex-direction: column;
-    background-color: #fff;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 40px 40px 40px 40px;
-    max-width: 400px;
-    width: 100%;
-    margin: 0 auto;
-  }
-  
-  .title-register {
-    margin-bottom: 20px;
-    font-size: 25px;
-    color: rgb(75, 170, 202);
-    font-family: Impact, "Arial Narrow Bold", sans-serif;
-  }
-  
-  .back-to-login-page:hover {
-    text-decoration: underline;
-  }
-  
-  .register-form-button {
-    width: 100%;
-    margin-top: 10px;
-  }
+.register-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-image: url("https://data.designervn.net/2019/09/9676_3c1b0f70d986fd4e324cb43331b33b81.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 
-  .input-register{
-    margin: 10px;
-  }
-  
+.image-form-container {
+  display: flex;
+  align-items: stretch;
+}
+
+.image-container {
+  flex: 1;
+  margin-right: 0px;
+}
+
+.image-container img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+.register-form {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 40px 40px 40px 40px;
+  max-width: 400px;
+  width: 100%;
+  margin: 0 auto;
+  background: linear-gradient(
+    135deg,
+    rgba(34, 193, 195, 1) 0%,
+    rgb(228, 226, 223) 100%
+  );
+}
+
+.title-register {
+  margin-bottom: 20px;
+  font-size: 25px;
+  color: rgb(202, 96, 35);
+  font-family: Impact, "Arial Narrow Bold", sans-serif;
+}
+
+.create-account {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.back-to-login-page {
+  color: #007bff;
+  text-decoration: none;
+}
+
+.back-to-login-page:hover {
+  text-decoration: underline;
+}
+
+.register-form .ant-input {
+  width: 100%;
+  margin: 10px 0;
+}
+
+.register-form .register-form-button {
+  width: 100%;
+  margin: 10px 0;
+}
