--- a/src/style/Sidebar.css
+++ b/src/style/Sidebar.css
@@ -3,26 +3,44 @@
   align-items: center;
   justify-content: center;
   background-color: #e6dee6;
-  color: #339c2a;  
+  color: #339c2a;
   padding: 20px 20px 20px 150px;
   text-align: center;
   font-size: 40px;
-  }
-  
-  .content-sidebar {
-    padding: 24px;
-    min-height: 360px;
-    background: whitesmoke;
-  }
-  
-  .footer-sidebar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #e6dee6;
-    color: #339c2a;  
-    padding: 15px 15px 15px 150px;
-    text-align: center;
-    font-size: 20px;
-  }
-  
+}
+
+.content-sidebar {
+  padding: 24px;
+  min-height: 360px;
+  background: whitesmoke;
+}
+
+.footer-sidebar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #e6dee6;
+  color: #339c2a;
+  padding: 15px 15px 15px 150px;
+  text-align: center;
+  font-size: 20px;
+}
+.sider {
+  background-color: blue;
+}
+
+.sider-button {
+  align-self: center;
+  margin-top: 20px;
+  margin-bottom: 16px;
+  margin-left: 25px;
+  justify-content: center;
+  color: blue;
+  background-color: white;
+  margin-bottom: 10px;
+}
+
+.sider-button:hover {
+  color: white;
+  background-color: blue;
+}
